# cask_lib

./: .gitignore  CMakeLists.txt  README.md  archived.md
include/cask/ecs/: component_store.hpp  entity_events.hpp  entity_table.hpp  frame_advancer.hpp  interpolated.hpp
include/cask/event/: event_queue.hpp  event_swapper.hpp
include/cask/identity/: entity_registry.hpp  uuid.hpp
include/cask/resource/: mesh_data.hpp  resource_store.hpp  texture_data.hpp
include/cask/schema/: cask_component.hpp  describe.hpp  describe_component_store.hpp  describe_entity_registry.hpp  loader.hpp  saver.hpp  serialization_registry.hpp  type_name.hpp
spec/ecs/: component_store_spec.cpp  entity_table_spec.cpp  frame_advancer_spec.cpp  interpolated_spec.cpp
spec/event/: event_integration_spec.cpp  event_queue_spec.cpp  event_swapper_spec.cpp
spec/identity/: entity_registry_spec.cpp  uuid_spec.cpp
spec/resource/: mesh_data_spec.cpp  resource_store_spec.cpp  texture_data_spec.cpp
spec/schema/: cask_component_spec.cpp  component_store_serialization_spec.cpp  describe_spec.cpp  entity_registry_serialization_spec.cpp  loader_spec.cpp  saver_spec.cpp  serialization_registry_spec.cpp  type_name_spec.cpp
